add a better splash message for SEO and crap

--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="span12 columns">    
         <div class="alert-message block-message info">
-          <p><strong>Howdy!</strong> Datacouch is loading! Give it a moment. This message may never go away if you have javascript turned off.</p>
+          <p><strong>Howdy!</strong> Datacouch is a place to share and collaborate on open and public datasets. This is the loading screen! Give it a moment. This message may never go away if you have javascript turned off.</p>
         </div>
       </div>
     </div>
