restyle browse apps button

--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -256,7 +256,7 @@
   <script type='text/mustache' class="appsTabTemplate">
     <div class="top">
       {{^apps}}<div class="description">You haven't made any apps on top of this data yet.</div>{{/apps}}
-      <a class='iconic magnifying-glass'></a><a href="#/browse!">Browse available apps</a>
+      <a href="#/browse!" class="btn"><span class="iconic magnifying-glass"></span>Browse available apps</a>
     </div>
     <div class="bottom">
       {{#apps}}
