--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -148,7 +148,7 @@
   
   <script type='text/mustache' class="dataTabTemplate">
     <div class="top">
-      <div class="title">{{user}}&nbsp;/ {{name}}</div>
+      <div class="title"><a href="/#/{{user}}">{{user}}</a>&nbsp;/ {{name}}</div>
       {{#description}}<div class="description">{{description}}</div>{{/description}}
       {{^description}}<div class="description">This dataset doesn't have a description.</div>{{/description}}
       {{#source}}<div class="datasource"><span class="strong">DATASOURCE:</span>{{source}}</div>{{/source}}
@@ -329,27 +329,26 @@
         <tr>
           {{#notEmpty}}<td class="column-header"></td>{{/notEmpty}}
           {{#headers}}
-          <td class="column-header">
-            <div class="column-header-title">
-              <a class="column-header-menu"></a>
-              <span class="column-header-name">{{.}}</span>
-            </div>
-            </div>
-          </td>
+            <td class="column-header">
+              <div class="column-header-title {{state}}">
+                <a class="column-header-menu"></a>
+                <span class="column-header-name">{{header}}</span>
+              </div>
+            </td>
           {{/headers}}
         </tr>
         {{#rows}}
-        <tr data-id="{{id}}">
-          <td><a class="row-header-menu"></a></td>
-          {{#cells}}
-          <td data-header="{{header}}">
-            <div class="data-table-cell-content">
-              <a href="javascript:{}" class="data-table-cell-edit" title="Edit this cell">&nbsp;</a>
-              <div class="data-table-cell-value">{{value}}</div>
-            </div>
-          </td>
-          {{/cells}}
-        </tr>
+          <tr data-id="{{id}}">
+            <td><a class="row-header-menu"></a></td>
+            {{#cells}}
+            <td data-header="{{header}}">
+              <div class="data-table-cell-content {{state}}">
+                <a href="javascript:{}" class="data-table-cell-edit" title="Edit this cell">&nbsp;</a>
+                <div class="data-table-cell-value">{{value}}</div>
+              </div>
+            </td>
+            {{/cells}}
+          </tr>
         {{/rows}}
         {{^rows}}
           <div class="gettingStarted">
@@ -358,7 +357,6 @@
               <p>You haven't uploaded any data yet. Check out the Import menu up top to get started.</p>
             </div>
             <img class="bigCouch" src="/images/couch-big.png">
-            
           </div>
         {{/rows}}
       </tbody>
