--- a/attachments/pages/recline.html
+++ b/attachments/pages/recline.html
@@ -5,6 +5,7 @@
   <title>DataCouch Editor</title>
   <link rel="stylesheet" href="/style/reset.css" media="screen">
   <link rel="stylesheet" href="/style/data-table.css" media="screen"> 
+  <link rel="stylesheet" href="/style/common.css">
   <link rel="stylesheet" href="/style/bootstrap.css">
   <link rel="stylesheet" href="/style/recline.css" media="screen">
   <link rel="stylesheet" href="/style/iconic.css" media="screen">
