--- a/attachments/pages/index.html
+++ b/attachments/pages/index.html
@@ -328,7 +328,7 @@
           <a href="http://{{url}}" class="thumbnail" alt="Project Name"></a>
           <div class="description">
             <strong><a href="http://{{url}}">{{ddoc}}</a></strong>
-            <p class="user"><small>Max Ogden</small></p>
+            <p class="user"><small>{{user}}</small></p>
             <p>{{description}}</p>
           </div>
           <hr />
